# PyESO

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  pyeso_nodata.spec  pyproject.toml
pyeso/: __init__.py  __main__.py  cli.py  linter.py  loader.py  models.py  registry.py  reporter.py
pyeso/api/: __init__.py  builtins.py  db.py  extractor.py  seed_data.py
pyeso/parser/: __init__.py  doc_parser.py  lua_visitor.py
pyeso/rules/: __init__.py  base.py  deprecated.py  deprecated_constants.py  event_validation.py  global_leak.py  method_validation.py  param_count.py  string_localization.py  unknown_api.py
tests/fixtures/: test_addon.lua
